# maige

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.electron.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: TODO-components.md  TODO.md
docs/designs/: maige.pen
electron/: analysis.worker.ts  clip.worker.ts  clipService.ts  clipWorkerPool.ts  database.ts  faceService.ts  imageAnalyzer.ts  main.ts  nativeModule.ts  preload.ts
feature-proposals/: albums-and-bulk-metadata.md  develop-module-expansion.md  file-menu-options.md  smart-image-organization.md
rust/maige-core/: Cargo.toml  README.md  index.d.ts  index.js  maige-core.darwin-arm64.node  package-lock.json  package.json
rust/maige-core/src/: adjustments.rs  error.rs  histogram.rs  lib.rs  napi.rs  phash.rs  processor.rs
shared/: types.ts
src/: App.css  App.tsx  api.d.ts  bridge.ts  electron-env.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  database.rs  image_processor.rs  main.rs
src/api/: aiProviders.ts  tauri.ts
src/components/: CreateAlbumModal.tsx  EditAlbumModal.tsx  ExportModal.tsx  FaceThumbnail.tsx  FloatingActionBar.tsx  PickModeHeader.tsx
src/components/adjustments/: AIPresets.tsx  AdjustmentSlider.tsx  ColorPanel.tsx  Histogram.tsx  LightPanel.tsx
src/components/gallery/: GalleryGrid.tsx
src/components/layout/: ImagePreview.tsx  ResizableLayout.tsx  ToolSidebar.tsx
src/components/modals/: AIConfigModal.tsx
src/components/panels/: AIBatchEditPanel.tsx  AIEditorPanel.tsx  DetailsPanel.tsx  DevelopPanel.tsx  DuplicatesPanel.tsx  Filmstrip.tsx  ImageInfoPanel.tsx  LibraryPanel.tsx  PeoplePanel.tsx  RightPanel.tsx
src/components/tools/: BrushSettingsPanel.tsx  CropOverlay.tsx  CropToolbar.tsx  HealClonePanel.tsx  LayersPanel.tsx  MaskSelectionPanel.tsx  TextOverlayPanel.tsx
src/components/viewer/: AIProcessingOverlay.tsx  ImageViewer.tsx
src/design-system/: index.ts  tokens.ts
src/design-system/components/: Badge.tsx  Button.tsx  Checkbox.tsx  Divider.tsx  EmptyState.tsx  Input.tsx  SectionHeader.tsx  Spinner.tsx  Textarea.tsx
src/design-system/layout/: Card.tsx  Modal.tsx  NavItem.tsx  Panel.tsx
src/hooks/: useCanvasProcessor.ts  useFaceDetection.ts  useImageAdjustments.ts
src/processing/: ImageProcessor.ts  faceDetector.ts
src/services/: aiService.ts
src/store/: useAIStore.ts  useEditStore.ts  useLibraryStore.ts  useThemeStore.ts  useUIStore.ts
src/utils/: assetUrl.ts
